# OsuTagDivider

./: CMakeLists.txt  README.md  main.cpp
app_data/: OsuTagDivider.desktop
data/: amethyst.css  config.ini  dark.css  light.css  style.css  turquoise.css
data/themes/: default_theme.css
data/themes/color/: amethyst.css  light.css  ocean breeze.css  turquoise.css
include/logic/: Beatmap.hpp  BeatmapProcessor.hpp  Config.hpp  ConfigManager.hpp  DifficultySettings.hpp  HitObject.hpp  TagDivideMode.hpp  TagDivisionSettings.hpp
include/ui/: BeatmapPathsPanel.hpp  DifficultySettingsPanel.hpp  MainWindow.hpp  TagDivisionSettingsPanel.hpp
src/logic/: BeatmapProcessor.cpp  ConfigManager.cpp
src/ui/: BeatmapPathsPanel.cpp  DifficultySettingsPanel.cpp  MainWindow.cpp  TagDivisionSettingsPanel.cpp
tests/: BeatmapProcessorTest.cpp
tests/test_data/: broken_oldmap.osu
